# AI-Work-Assistant-Environment

./: .gitignore  Dockerfile  README.md  app.py  code_grader.py  code_task.py  data_task.py  email_task.py  env.py  graders.py  inference.py  openenv.yaml  presentation.html  pyproject.toml  requirements.txt  run_baseline.py
grader/: __init__.py  code_grader.py  data_grader.py  email_grader.py
server/: app.py
static/: index.html
tasks/: code_task.py  data_task.py  email_grader.py  email_task.py
tasks/task_1/: grader.py
tasks/task_2/: grader.py
tasks/task_3/: grader.py
