[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-work-assistant"
version = "0.1.0"
description = "A real-world OpenEnv environment for productivity agents."
dependencies = [
    "pydantic>=1.10.0",
    "openai>=1.0.0",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-dotenv",
    "rich",
    "matplotlib"
]

[tool.setuptools]
packages = ["tasks", "grader"]
