[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-work-assistant"
version = "0.1.0"
description = "A real-world OpenEnv environment for productivity agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv>=0.2.0",
    "pydantic>=1.10.0",
    "openai>=1.0.0",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-dotenv",
    "rich",
    "matplotlib"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["tasks", "graders"]
